--- a/pom.xml
+++ b/pom.xml
@@ -68,4 +68,11 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/pkarnati-arnsoft/java-maven</url>
+    </repository>
+  </distributionManagement>
 </project>
